--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "cy:open": "cypress open"
+    "cy:open": "cypress open",
+    "update-types": "npx supabase gen types --lang=typescript --project-id mzexgfklayufowipbfwf --schema public > src/lib/types/supabase.d.ts"
   },
   "dependencies": {
     "@supabase/ssr": "^0.4.0",
