Add cypress script

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "cy:open": "cypress open",
-    "update-types": "npx supabase gen types --lang=typescript --project-id mzexgfklayufowipbfwf --schema public > src/lib/types/supabase.d.ts"
+    "update-types": "npx supabase gen types --lang=typescript --project-id mzexgfklayufowipbfwf --schema public > src/lib/types/supabase.d.ts",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@stripe/react-stripe-js": "^2.7.3",
@@ -31,7 +32,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "cypress": "^13.11.0",
+    "cypress": "^13.13.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
